--- a/src/app/components/chat/chat-room/chat-room.component.html
+++ b/src/app/components/chat/chat-room/chat-room.component.html
@@ -2,7 +2,11 @@
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-button (click)="backOne()" slot="start">
-        <ion-icon style="color: white" slot="icon-only" name="arrow-back"></ion-icon>
+        <ion-icon
+          style="color: white"
+          slot="icon-only"
+          name="arrow-back"
+        ></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title> Chat {{ title }} </ion-title>
@@ -11,11 +15,11 @@
     <div>
       <ion-chip *ngIf="buyer" color="secondary">
         <ion-chip-icon class="icon-chip-detail" name="person"></ion-chip-icon>
-        <ion-label>{{buyer.name}} {{buyer.fatherLastName}}</ion-label>
+        <ion-label>{{ buyer.name }} {{ buyer.fatherLastName }}</ion-label>
       </ion-chip>
       <ion-chip color="secondary" *ngIf="seller !== undefined">
         <ion-chip-icon class="icon-chip-detail" name="business"></ion-chip-icon>
-        <ion-label>{{seller.name}} </ion-label>
+        <ion-label>{{ seller.name }} </ion-label>
       </ion-chip>
     </div>
   </ion-toolbar>
@@ -25,7 +29,9 @@
     <div *ngIf="isLoad">
       <div class="flex-contenet" id="flex-contenet">
         <!-- contenido de chat -->
-        <span class="item-bottom   " *ngFor="
+        <span
+          class="item-bottom   "
+          *ngFor="
             let msg of chat.messages;
             trackBy: trackByCreated;
             let last = last;
@@ -35,19 +41,29 @@
             'flex-item-me': user.id === msg.uid,
             'flex-item-you': user.id !== msg.uid,
             'animated zoomInUp delay-1s': isSending && last
-          }">
-          <ion-icon class="icon-flex" *ngIf="user.id !== msg.uid" name="contact"></ion-icon>
-          <div class="bubble " [ngClass]="{ you: user.id !== msg.uid, me: user.id === msg.uid }">
+          }"
+        >
+          <ion-icon
+            class="icon-flex"
+            *ngIf="user.id !== msg.uid"
+            name="contact"
+          ></ion-icon>
+          <div
+            class="bubble "
+            [ngClass]="{ you: user.id !== msg.uid, me: user.id === msg.uid }"
+          >
             <div>{{ msg.content }}</div>
           </div>
 
           <small *ngIf="user.id !== msg.uid">{{
             msg.typeOfUser === 'buyer'
-            ? 'comprador'
-            : msg.typeOfUser === 'seller'
-            ? 'vendedor'
-            : 'administrador'
-            }}</small>
+              ? 'comprador'
+              : msg.typeOfUser === 'seller'
+              ? 'vendedor'
+              : msg.typeOfUser === 'preBuyer'
+              ? 'comprador'
+              : 'administrador'
+          }}</small>
           {{ last ? lastScroll(i) : '' }}
         </span>
       </div>
@@ -58,14 +74,26 @@
 </ion-content>
 <ion-footer>
   <ion-toolbar color="primary">
-    <textarea #myInput id="myInput" rows="1" maxlength="500" (keyup)="textAreaKeyup()" [(ngModel)]="contentText" class="textarea-chat"
-      (keydown.enter)="submit()"></textarea>
+    <textarea
+      #myInput
+      id="myInput"
+      rows="1"
+      maxlength="500"
+      (keyup)="textAreaKeyup()"
+      [(ngModel)]="contentText"
+      class="textarea-chat"
+      (keydown.enter)="submit()"
+    ></textarea>
     <ion-buttons slot="end">
-      <ion-button (click)="submit();" *ngIf="isSending !== false">
+      <ion-button (click)="submit()" *ngIf="isSending !== false">
         <ion-icon slot="icon-only" name="send"></ion-icon>
       </ion-button>
       <ion-button *ngIf="isSending === false">
-        <ion-spinner slot="icon-only" name="dots" color="secondary"></ion-spinner>
+        <ion-spinner
+          slot="icon-only"
+          name="dots"
+          color="secondary"
+        ></ion-spinner>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
