--- a/src/app/components/chat/chat.page.html
+++ b/src/app/components/chat/chat.page.html
@@ -3,61 +3,92 @@
     <ion-buttons slot="start">
       <ion-menu-button style="color: white"></ion-menu-button>
     </ion-buttons>
-    <ion-title>
-      Chat
-    </ion-title>
+    <ion-title> Chat </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content padding>
-  <ng-container *ngIf="user.type === 'buyer'; then Buyer; else NoBuyer"></ng-container>
+  <ng-container
+    *ngIf="
+      user.type === 'buyer' || user.type === 'preBuyer';
+      then: Buyer;
+      else: NoBuyer
+    "
+  ></ng-container>
   <ng-template #Buyer>
     <!-- En listar status azul -->
-    <ng-container *ngIf="propertiesBuyer.length > 0; else notBlue">
-
-      <ion-card *ngFor="let item of propertiesBuyer" [ngClass]="{'state-verde': item.status === 'verde', 'state-amarillo': item.status === 'amarillo','state-rojo': item.status === 'rojo','state-azul': item.status === 'azul' }"
-        (click)="goToRoom(item.property._id)">
+    <ng-container *ngIf="propertiesBuyer.length > 0; else: notBlue">
+      <ion-card
+        *ngFor="let item of propertiesBuyer"
+        [ngClass]="{
+          'state-verde': item.status === 'verde',
+          'state-amarillo': item.status === 'amarillo',
+          'state-rojo': item.status === 'rojo',
+          'state-azul': item.status === 'azul'
+        }"
+        (click)="goToRoom(item.property._id)"
+      >
         <ion-card-header>
           <ion-item lines="none">
-            <ion-card-title text-wrap>{{item.property.name}}</ion-card-title>
+            <ion-card-title text-wrap>{{ item.property.name }}</ion-card-title>
             <ion-icon *ngIf="item.noRead > 0" slot="end" name="mail"></ion-icon>
-            <ion-badge *ngIf="item.noRead > 0" id="badge" color="danger">{{item.noRead}}</ion-badge>
+            <ion-badge *ngIf="item.noRead > 0" id="badge" color="danger">{{
+              item.noRead
+            }}</ion-badge>
           </ion-item>
         </ion-card-header>
         <ion-card-content class="content-card-chat">
           <ion-item lines="none">
-            <ion-icon style="color:  #F5811E" name="arrow-forward" slot="end"></ion-icon>
+            <ion-icon
+              style="color:  #F5811E"
+              name="arrow-forward"
+              slot="end"
+            ></ion-icon>
             <ion-label text-wrap>Chat de la propiedad</ion-label>
           </ion-item>
         </ion-card-content>
       </ion-card>
     </ng-container>
     <ng-template #notBlue>
-      <h5 *ngIf="propertiesBuyer.length === 0 && isLoad">No cuentas con propiedades adquiridas para generar chat</h5>
-      <ion-spinner *ngIf="propertiesBuyer.length === 0 && !isLoad" name="bubbles"></ion-spinner>
+      <h5 *ngIf="propertiesBuyer.length === 0 && isLoad">
+        No cuentas con propiedades adquiridas para generar chat
+      </h5>
+      <ion-spinner
+        *ngIf="propertiesBuyer.length === 0 && !isLoad"
+        name="bubbles"
+      ></ion-spinner>
     </ng-template>
-
   </ng-template>
   <ng-template #NoBuyer>
     <!-- todos los chat para admin ofice -->
     <!-- filtrar los chat para seller y manag -->
     <div *ngIf="isLoad" class="my-contenet">
-      <ion-card *ngFor="let chat of chats" class="state-azul" (click)="goToRoom(chat.property)">
+      <ion-card
+        *ngFor="let chat of chats"
+        class="state-azul"
+        (click)="goToRoom(chat.property)"
+      >
         <ion-card-header>
           <ion-item lines="none">
-            <ion-card-title *ngIf="chat.prop" text-wrap>{{chat.prop.name}}</ion-card-title>
+            <ion-card-title *ngIf="chat.prop" text-wrap>{{
+              chat.prop.name
+            }}</ion-card-title>
             <ion-icon *ngIf="chat.noRead > 0" slot="end" name="mail"></ion-icon>
-            <ion-badge *ngIf="chat.noRead > 0" id="badge" color="danger">{{chat.noRead}}</ion-badge>
+            <ion-badge *ngIf="chat.noRead > 0" id="badge" color="danger">{{
+              chat.noRead
+            }}</ion-badge>
           </ion-item>
         </ion-card-header>
         <ion-card-content class="content-card-chat">
           <ion-item lines="none">
-            <ion-icon style="color:  #F5811E" name="arrow-forward" slot="end"></ion-icon>
+            <ion-icon
+              style="color:  #F5811E"
+              name="arrow-forward"
+              slot="end"
+            ></ion-icon>
             <ion-label text-wrap>Chat de la propiedad</ion-label>
           </ion-item>
         </ion-card-content>
       </ion-card>
     </div>
-
   </ng-template>
-
 </ion-content>
