--- a/src/app/components/documents/documents.component.html
+++ b/src/app/components/documents/documents.component.html
@@ -12,58 +12,54 @@
     </ion-toolbar>
   -->
   <ion-header>
-    <app-menu-general
-      [isMenuButton]="'menu'"
-      [colorMenuButton]="'white'"
-      [titleMenu]="'Documentos'"
-      [buttonNotification]="'notifications'"
-      [buttonUser]="'person'"
-    ></app-menu-general>
+    <app-menu-general [isMenuButton]="'menu'"
+                      [colorMenuButton]="'white'"
+                      [titleMenu]="'Documentos'"
+                      [buttonNotification]="'notifications'"
+                      [buttonUser]="'person'"></app-menu-general>
   </ion-header>
 </ion-header>
 <ion-content padding>
   <ng-container *ngIf="isLoading; then: Load; else: noLoad"></ng-container>
   <!-- contenido -->
 
-  <ng-template #Load class="my-contenet">
-    <mat-drawer-container class="side-container" autosize>
+  <ng-template #Load
+               class="my-contenet">
+    <mat-drawer-container class="side-container"
+                          autosize>
       <!-- contenido de filtros -->
-      <mat-drawer
-        [class.mat-elevation-z1]="true"
-        position="end"
-        #drawer
-        class="sidenav"
-        [mode]="isDesktop ? 'side' : 'over'"
-        [opened]="openMenu"
-      >
-        <app-document-filter
-          (filters)="getFilters($event)"
-          (resetAll)="resetAll()"
-          (closeMenu)="drawer.close()"
-          [isDesktop]="isDesktop"
-        ></app-document-filter>
+      <mat-drawer [class.mat-elevation-z1]="true"
+                  position="end"
+                  #drawer
+                  class="sidenav"
+                  [mode]="isDesktop ? 'side' : 'over'"
+                  [opened]="openMenu">
+        <app-document-filter (filters)="getFilters($event)"
+                             (resetAll)="resetAll()"
+                             (closeMenu)="drawer.close()"
+                             [isDesktop]="isDesktop"></app-document-filter>
       </mat-drawer>
       <!-- /contenido de filtros -->
       <!-- filtros boton -->
-      <ion-item *ngIf="!isDesktop" lines="none">
-        <ion-button
-          (click)="drawer.toggle()"
-          slot="end"
-          color="secondary"
-          fill="outline"
-        >
-          <ion-icon name="funnel"></ion-icon>Filtros({{ numOfFilters }})
+      <ion-item *ngIf="!isDesktop"
+                lines="none">
+        <ion-button (click)="drawer.toggle()"
+                    slot="end"
+                    color="secondary"
+                    fill="outline">
+          <ion-icon name="funnel"></ion-icon>Filtros({{
+          numOfFilters }})
         </ion-button>
       </ion-item>
-      <ion-item *ngIf="isDesktop" lines="none">
-        <ion-button
-          (click)="drawer.toggle()"
-          slot="end"
-          color="secondary"
-          fill="outline"
-        >
+      <ion-item *ngIf="isDesktop"
+                lines="none">
+        <ion-button (click)="drawer.toggle()"
+                    slot="end"
+                    color="secondary"
+                    fill="outline">
           <ion-icon name="funnel"></ion-icon>Filtros
-          {{ (drawer.openedChange | async) ? 'cerrar' : 'abrir' }}
+          {{ (drawer.openedChange | async) ? 'cerrar' :
+          'abrir' }}
         </ion-button>
       </ion-item>
 
@@ -71,16 +67,13 @@
 
       <!-- Table -->
       <h2>Tabla de Usuarios</h2>
-      <app-general-table
-        [columns]="columns"
-        [rows]="rows"
-        [isDesktop]="isDesktop"
-        (editButton)="edit($event)"
-        (deletedButton)="presentAlertConfirm($event)"
-        (checkbox)="userSelect($event)"
-        [showChips]="true"
-        [showLoader]="showLoader"
-      >
+      <app-general-table [columns]="columns"
+                         [rows]="rows"
+                         [isDesktop]="isDesktop"
+                         (editButton)="edit($event)"
+                         (checkbox)="userSelect($event)"
+                         [showChips]="true"
+                         [showLoader]="showLoader">
       </app-general-table>
       <!-- /Table -->
     </mat-drawer-container>
@@ -93,13 +86,13 @@
   </ng-template>
 </ion-content>
 <!-- fab placed to the bottom end -->
-<ion-fab vertical="bottom" horizontal="start" slot="fixed">
-  <ion-fab-button
-    [disabled]="!selectedUsers || selectedUsers.length === 0"
-    (click)="setEmail()"
-    *ngIf="isLoading"
-    color="secondary"
-  >
+<ion-fab vertical="bottom"
+         horizontal="start"
+         slot="fixed">
+  <ion-fab-button [disabled]="!selectedUsers || selectedUsers.length === 0"
+                  (click)="setEmail()"
+                  *ngIf="isLoading"
+                  color="secondary">
     <ion-icon name="mail"></ion-icon>
   </ion-fab-button>
 </ion-fab>
